tests/transpiler/x/hs/map_assign.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/map_assign.hs:10:23: error:
    • Couldn't match type ‘[Char]’ with ‘Int’
      Expected: Int
        Actual: String
    • In the second argument of ‘(!!)’, namely ‘"bob"’
      In the first argument of ‘print’, namely ‘((scores !! "bob"))’
      In a stmt of a 'do' block: print ((scores !! "bob"))
   |
10 |     print ((scores !! "bob"))
   |                       ^^^^^
